--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./normalize.scss";
+
+:root {
+    --color-primary-text: rgb(223, 115, 0);
+    --color-primary: orange;
+    --color-primary-dark: rgb(230, 149, 0);
+
+    --color-secondary: rgb(56, 126, 255);
+    --border-radius-default: 12px;
+
+    --grey-1: #e5e5e5;
+    --grey-15: #d8d8d8;
+    --grey-2: #cccccc;
+    --grey-3: #b3b3b3;
+    --grey-4: #999999;
+    --grey-5: #808080;
+    --grey-6: #666666;
+    --grey-7: #4d4d4d;
+    --grey-9: #313131;
+    --grey-075: #ececec;
+    --grey-05: #f2f2f2;
+
+    --text-muted: var(--grey-4);
+    --text-default: var(--grey-9);
+}
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
