--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <div></div>
+  <div>
+    <app-sidebar></app-sidebar>
+  </div>
   <div>
     <app-user-details></app-user-details>
   </div>
