--- a/src/app/components/user-details/user-details.component.scss
+++ b/src/app/components/user-details/user-details.component.scss
@@ -23,7 +23,7 @@
 .user-name {
     font-size: 18px;
     font-weight: 600;
-    color: var(--color-primary-text);
+    color: var(--color-text-primary);
     margin-bottom: 24px;
     margin-top: 0;
 }
@@ -45,10 +45,10 @@
 
 .stat-name {
     font-size: 11px;
-    color: var(--text-muted);
+    color: var(--color-text-muted);
 }
 
 .stat-value {
     font-size: 13px;
-    color: var(--text-default);
+    color: var(--color-text-default);
 }
