--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,8 +8,42 @@
 
 .container {
     display: grid;
-    grid-template-columns: 180px 1fr 200px;
+    grid-template-columns: 180px 1fr 240px;
     column-gap: 16px;
     width: 100vw;
     max-width: 1080px;
+}
+
+.notifications-container {
+    background: white;
+    width: 100%;
+    padding: 16px;
+}
+
+.middle-section {
+    overflow-y: scroll;
+
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+        width: 0;
+        height: 0;
+    }
+
+    &::-webkit-scrollbar:horizontal {
+        display: none;
+        width: 0;
+        height: 0;
+    }
+
+    &::-webkit-scrollbar-thumb:horizontal {
+        width: 0;
+        height: 0;
+    }
+
+    app-user-details,
+    app-ongoing-applications-list {
+        margin-bottom: 42px;
+    }
 }
