--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,14 @@
 <div class="logo-container"><img width="140" src="../../../assets/logo-sunstone.webp" alt="Sunstone Eduversity logo">
 </div>
 <a href="" target="_blank" rel="noopener noreferrer" class="router-link active">
-    Dashboard
+    <app-icon name="home"></app-icon>
+    <span>Dashboard</span>
 </a>
 <a href="" target="_blank" rel="noopener noreferrer" class="router-link">
-    Profile
+    <app-icon name="user"></app-icon>
+    <span>Profile</span>
 </a>
 <a href="" target="_blank" rel="noopener noreferrer" class="router-link">
-    Opportunities
+    <app-icon name="briefcase"></app-icon>
+    <span>Opportunities</span>
 </a>
