--- a/src/app/components/user-details/user-details.component.scss
+++ b/src/app/components/user-details/user-details.component.scss
@@ -42,3 +42,9 @@
         // justify-self: flex-end;
     }
 }
+
+@media (max-width: 960px) {
+    .stat-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
